--- a/README.adoc
+++ b/README.adoc
@@ -5,10 +5,11 @@ image:https://travis-ci.org/arduino-libraries/SD.svg?branch=master[Build Status,
 Small library for debuf prints in your code.
 Support printf-style functions, plus memory buffer function : shows adress - bytes - characters style:
 
+```ruby
 [2400d67c] 636e7546_6e6f6974_20292831_736e6f63_68632074_74207261_00747865_000003ca_[Func_tion_1() _cons_t ch_ar t_ext._...._]
 [2400d69c] 24001880_24001f88_00000000_24000008_080404c7_00000000_00000000_00000000_[...$_...$_...._...$_...._...._...._...._]
 [2400d6bc] 00000000_00000000_0804287f_00000000_08044579_08060d77_00000000_24003540_[...._...._(.._...._yE.._w..._...._@5.$_]
- 
+``` 
 
 For more information about this library please visit 
 https://github.com/javos65/Arduino-DEBUGF
