--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,6 @@
-= DEBUGF function for Arduino =
+## DEBUGF function for Arduino =
 
 ![logo](/images/DEBUGF.jpg?raw=true)
-<img src="http://url/image.png" height="60" width="60" >
 
 image:https://travis-ci.org/arduino-libraries/SD.svg?branch=master[Build Status, link=https://travis-ci.org/arduino-libraries/SD]
 
